# MacDevKit

./: .gitignore  README.en.md  README.md  init.sh
macdevkit-cli/: Cargo.toml  Makefile  README.md  build.rs  init_wrapper.sh  install.sh
macdevkit-cli/src/: main.rs  script_handler.rs
